<resources xml:space="preserve">
  <string name="app_name" translatable="false">BookApp</string>
  <string name="instructions">Enter a full or partial book name or text from the book. Click Search Books to find out who wrote the book. </string>
  <string name="button_text">Search Books</string>
  <string name="input_hint">Book Title</string>
  <string name="no_search_term">Please enter a search term.</string>
  <string name="no_network">Please check your network connection and try again.</string>
  <string name="no_results">No Results Found</string>
  <string name="ServerError">The server could not be found. Please try again after some time!</string>
  <string name="ParseError">Parsing error! Please try again after some time!</string>
  <string name="TimeoutError">Connection TimeOut! Please check your internet connection.</string>
  <string name="RefreshPage">REFRESH</string>

  <string name="valid_isbn">Enter a valid ISBN</string>
  <string name="valid_title">Enter book title</string>
  <string name="valid_author">Enter book author</string>

  <!--BookInfo>-->

  <string name="Average_Rating">Average Rating:&#160;</string>
  <string name="by">by </string>
  <string name="Published">Published:&#160;</string>
  <string name="Genres">Genres:&#160;</string>
  <string name="ISBN_13" translatable="false">ISBN_13:&#160;</string>
  <string name="ISBN_10" translatable="false">ISBN_10:&#160;</string>
  <string name="Pages">Pages:&#160;</string>
  <string name="WeCantGetInfo">We cant get information about this book. Try later."</string>

  <!--Buttons>-->
  <string name="MarkAsRead">Mark as read</string>
  <string name="MarkAsNotRead">Mark as not read</string>
  <string name="AddtoCollection">Add to Collection</string>
  <string name="RemovefromCollection">Remove from Collection</string>
  <string name="AddtoWishlist">Add to Wishlist</string>
  <string name="RemovefromWishlist">Remove from Wishlist</string>

  <!--MainMenu>-->
  <string name="couldNotQR">Could not find book from QR</string>
  <!--footer_logo>-->
  <string name="poweredBy" translatable="false">"powered by"</string>

  <!--menu>-->
  <string name="Search">Search</string>
  <string name="Collection">Go to Collection</string>
  <string name="AddManual">Add Manually</string>
  <string name="Sort">Sort</string>

  <string name="Sort_Rating">by rating</string>
  <string name="Sort_Rating_ASC">by rating (asc)</string>
  <string name="Sort_Rating_DESC">by rating (desc)</string>

  <string name="Sort_AvgRating">by avg rating</string>
  <string name="Sort_AvgRating_ASC">by avg rating (asc)</string>
  <string name="Sort_AvgRating_DESC">by avg rating (desc)</string>

  <string name="Sort_Title">by title</string>
  <string name="Sort_Title_ASC">by title (asc)</string>
  <string name="Sort_Title_DESC">by title (desc)</string>

  <string name="Sort_Author">by author</string>
  <string name="Sort_Author_ASC">by author (asc)</string>
  <string name="Sort_Author_DESC">by author (desc)</string>

  <!--error_page-->
  <string name="TryAddingManually">Try adding a book manually from the toolbar.</string>
  <string name="NoBooksCollection">Your collection is empty, add some books.</string>
  <string name="NoBooksWishlist">Your wishlist is empty, add some books.</string>

  <!--manual-->
  <string name="Scanbarcode">Scan barcode</string>
  <string name="AddISBN">Add by ISBN</string>

  <!--manual_add-->
    <string name="title">Title :</string>
  <string name="author">Author :</string>
  <string name="add">Add</string>
  <!--manual_add_isbn-->
<string name="ISBN">ISBN</string>

</resources>