<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/action_search2"
    android:icon="@drawable/ic_search_white_24dp"
    android:title="@string/Search"
    android:iconifiedByDefault="true"
    app:actionViewClass="android.support.v7.widget.SearchView"
    app:showAsAction="always" />

  <item
    android:title="@string/Sort"
    android:icon="@drawable/ic_sort_white_24dp"
    app:showAsAction="ifRoom|collapseActionView">
    <menu>
      <item
        android:id="@+id/menuSortRating"
        android:onClick="sortBooks"
        android:title="@string/Sort_Rating" />
      <item
        android:id="@+id/menuSortAvgRating"
        android:onClick="sortBooks"
        android:title="@string/Sort_AvgRating" />
      <item
        android:id="@+id/menuSortTitle"
        android:onClick="sortBooks"
        android:title="@string/Sort_Title" />
      <item
        android:id="@+id/menuSortAuthor"
        android:onClick="sortBooks"
        android:title="@string/Sort_Author" />
    </menu>
  </item>

</menu>